node/WebIDLParser.js
exports.Parser = (function(){
  /* Generated by PEG.js 0.6.2 (http://pegjs.majda.cz/). */
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "AbsoluteScopedName": parse_AbsoluteScopedName,
        "Argument": parse_Argument,
        "Arguments": parse_Arguments,
        "ArgumentsRest": parse_ArgumentsRest,
        "ArrayType": parse_ArrayType,
        "Attribute": parse_Attribute,
        "BooleanLiteral": parse_BooleanLiteral,
        "EnumValues": parse_EnumValues,
        "EnumValuesRest": parse_EnumValuesRest,
        "ExtAttr": parse_ExtAttr,
        "ExtAttrArgList": parse_ExtAttrArgList,
        "ExtAttrNameValue": parse_ExtAttrNameValue,
        "ExtAttrNamedArgList": parse_ExtAttrNamedArgList,
        "ExtAttrNoArg": parse_ExtAttrNoArg,
        "ExtAttrs": parse_ExtAttrs,
        "ExtAttrsRest": parse_ExtAttrsRest,
        "FloatType": parse_FloatType,
        "GetRaises": parse_GetRaises,
        "Nullable": parse_Nullable,
        "Operation": parse_Operation,
        "OperationRest": parse_OperationRest,
        "PrimitiveType": parse_PrimitiveType,
        "Qualifiers": parse_Qualifiers,
        "Raises": parse_Raises,
        "RelativeScopedName": parse_RelativeScopedName,
        "ReturnType": parse_ReturnType,
        "ScopedName": parse_ScopedName,
        "ScopedNameList": parse_ScopedNameList,
        "ScopedNameListRest": parse_ScopedNameListRest,
        "ScopedNameRest": parse_ScopedNameRest,
        "Sequence": parse_Sequence,
        "SetRaises": parse_SetRaises,
        "SimpleType": parse_SimpleType,
        "Special": parse_Special,
        "Stringifier": parse_Stringifier,
        "TypeDesc": parse_TypeDesc,
        "TypeList": parse_TypeList,
        "TypeListRest": parse_TypeListRest,
        "UnionType": parse_UnionType,
        "UnsignedIntegerType": parse_UnsignedIntegerType,
        "attrOrOp": parse_attrOrOp,
        "callback": parse_callback,
        "callbackinterface": parse_callbackinterface,
        "const": parse_const,
        "constExpr": parse_constExpr,
        "decimal": parse_decimal,
        "defaultValue": parse_defaultValue,
        "definition": parse_definition,
        "definitions": parse_definitions,
        "dictionary": parse_dictionary,
        "dictionaryMember": parse_dictionaryMember,
        "dotFloat": parse_dotFloat,
        "enum": parse_enum,
        "exMember": parse_exMember,
        "exception": parse_exception,
        "expFloat": parse_expFloat,
        "extendedAttributeList": parse_extendedAttributeList,
        "field": parse_field,
        "float": parse_float,
        "floatEe": parse_floatEe,
        "hex": parse_hex,
        "identifier": parse_identifier,
        "ifInheritance": parse_ifInheritance,
        "ifMember": parse_ifMember,
        "implements": parse_implements,
        "integer": parse_integer,
        "interface": parse_interface,
        "leadFloat": parse_leadFloat,
        "module": parse_module,
        "octal": parse_octal,
        "other": parse_other,
        "partialinterface": parse_partialinterface,
        "s": parse_s,
        "space": parse_space,
        "string": parse_string,
        "type": parse_type,
        "typedef": parse_typedef,
        "w": parse_w
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "definitions";
      }
      
      var pos = 0;
      var reportMatchFailures = true;
      var rightmostMatchFailuresPos = 0;
      var rightmostMatchFailuresExpected = [];
      var cache = {};
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        
        if (charCode <= 0xFF) {
          var escapeChar = 'x';
          var length = 2;
        } else {
          var escapeChar = 'u';
          var length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function quote(s) {
        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
         * string literal except for the closing quote character, backslash,
         * carriage return, line separator, paragraph separator, and line feed.
         * Any character may appear in the form of an escape sequence.
         */
        return '"' + s
          .replace(/\\/g, '\\\\')            // backslash
          .replace(/"/g, '\\"')              // closing quote character
          .replace(/\r/g, '\\r')             // carriage return
          .replace(/\n/g, '\\n')             // line feed
          .replace(/[\x80-\uFFFF]/g, escape) // non-ASCII characters
          + '"';
      }
      
      function matchFailed(failure) {
        if (pos < rightmostMatchFailuresPos) {
          return;
        }
        
        if (pos > rightmostMatchFailuresPos) {
          rightmostMatchFailuresPos = pos;
          rightmostMatchFailuresExpected = [];
        }
        
        rightmostMatchFailuresExpected.push(failure);
      }
      
      function parse_space() {
        var cacheKey = 'space@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        if (input.substr(pos, 1) === " ") {
          var result20 = " ";
          pos += 1;
        } else {
          var result20 = null;
          if (reportMatchFailures) {
            matchFailed("\" \"");
          }
        }
        if (result20 !== null) {
          var result0 = result20;
        } else {
          if (input.substr(pos, 1) === "	") {
            var result19 = "	";
            pos += 1;
          } else {
            var result19 = null;
            if (reportMatchFailures) {
              matchFailed("\"	\"");
            }
          }
          if (result19 !== null) {
            var result0 = result19;
          } else {
            if (input.substr(pos, 1) === "\r") {
              var result18 = "\r";
              pos += 1;
            } else {
              var result18 = null;
              if (reportMatchFailures) {
                matchFailed("\"\\r\"");
              }
            }
            if (result18 !== null) {
              var result0 = result18;
            } else {
              if (input.substr(pos, 1) === "\n") {
                var result17 = "\n";
                pos += 1;
              } else {
                var result17 = null;
                if (reportMatchFailures) {
                  matchFailed("\"\\n\"");
                }
              }
              if (result17 !== null) {
                var result0 = result17;
              } else {
                if (input.substr(pos, 1) === "") {
                  var result16 = "";
                  pos += 1;
                } else {
                  var result16 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"\"");
                  }
                }
                if (result16 !== null) {
                  var result0 = result16;
                } else {
                  var savedPos3 = pos;
                  if (input.substr(pos, 2) === "//") {
                    var result12 = "//";
                    pos += 2;
                  } else {
                    var result12 = null;
                    if (reportMatchFailures) {
                      matchFailed("\"//\"");
                    }
                  }
                  if (result12 !== null) {
                    var result13 = [];
                    if (input.substr(pos).match(/^[^\n]/) !== null) {
                      var result15 = input.charAt(pos);
                      pos++;
                    } else {
                      var result15 = null;
                      if (reportMatchFailures) {
                        matchFailed("[^\\n]");
                      }
                    }
                    while (result15 !== null) {
                      result13.push(result15);
                      if (input.substr(pos).match(/^[^\n]/) !== null) {
                        var result15 = input.charAt(pos);
                        pos++;
                      } else {
                        var result15 = null;
                        if (reportMatchFailures) {
                          matchFailed("[^\\n]");
                        }
                      }
                    }
                    if (result13 !== null) {
                      if (input.substr(pos, 1) === "\n") {
                        var result14 = "\n";
                        pos += 1;
                      } else {
                        var result14 = null;
                        if (reportMatchFailures) {
                          matchFailed("\"\\n\"");
                        }
                      }
                      if (result14 !== null) {
                        var result11 = [result12, result13, result14];
                      } else {
                        var result11 = null;
                        pos = savedPos3;
                      }
                    } else {
                      var result11 = null;
                      pos = savedPos3;
                    }
                  } else {
                    var result11 = null;
                    pos = savedPos3;
                  }
                  if (result11 !== null) {
                    var result0 = result11;
                  } else {
                    var savedPos0 = pos;
                    if (input.substr(pos, 2) === "/*") {
                      var result2 = "/*";
                      pos += 2;
                    } else {
                      var result2 = null;
                      if (reportMatchFailures) {
                        matchFailed("\"/*\"");
                      }
                    }
                    if (result2 !== null) {
                      var result3 = [];
                      if (input.substr(pos).match(/^[^*]/) !== null) {
                        var result10 = input.charAt(pos);
                        pos++;
                      } else {
                        var result10 = null;
                        if (reportMatchFailures) {
                          matchFailed("[^*]");
                        }
                      }
                      if (result10 !== null) {
                        var result5 = result10;
                      } else {
                        var savedPos1 = pos;
                        if (input.substr(pos, 1) === "*") {
                          var result7 = "*";
                          pos += 1;
                        } else {
                          var result7 = null;
                          if (reportMatchFailures) {
                            matchFailed("\"*\"");
                          }
                        }
                        if (result7 !== null) {
                          var savedPos2 = pos;
                          var savedReportMatchFailuresVar0 = reportMatchFailures;
                          reportMatchFailures = false;
                          if (input.substr(pos, 1) === "/") {
                            var result9 = "/";
                            pos += 1;
                          } else {
                            var result9 = null;
                            if (reportMatchFailures) {
                              matchFailed("\"/\"");
                            }
                          }
                          reportMatchFailures = savedReportMatchFailuresVar0;
                          if (result9 === null) {
                            var result8 = '';
                          } else {
                            var result8 = null;
                            pos = savedPos2;
                          }
                          if (result8 !== null) {
                            var result6 = [result7, result8];
                          } else {
                            var result6 = null;
                            pos = savedPos1;
                          }
                        } else {
                          var result6 = null;
                          pos = savedPos1;
                        }
                        if (result6 !== null) {
                          var result5 = result6;
                        } else {
                          var result5 = null;;
                        };
                      }
                      while (result5 !== null) {
                        result3.push(result5);
                        if (input.substr(pos).match(/^[^*]/) !== null) {
                          var result10 = input.charAt(pos);
                          pos++;
                        } else {
                          var result10 = null;
                          if (reportMatchFailures) {
                            matchFailed("[^*]");
                          }
                        }
                        if (result10 !== null) {
                          var result5 = result10;
                        } else {
                          var savedPos1 = pos;
                          if (input.substr(pos, 1) === "*") {
                            var result7 = "*";
                            pos += 1;
                          } else {
                            var result7 = null;
                            if (reportMatchFailures) {
                              matchFailed("\"*\"");
                            }
                          }
                          if (result7 !== null) {
                            var savedPos2 = pos;
                            var savedReportMatchFailuresVar0 = reportMatchFailures;
                            reportMatchFailures = false;
                            if (input.substr(pos, 1) === "/") {
                              var result9 = "/";
                              pos += 1;
                            } else {
                              var result9 = null;
                              if (reportMatchFailures) {
                                matchFailed("\"/\"");
                              }
                            }
                            reportMatchFailures = savedReportMatchFailuresVar0;
                            if (result9 === null) {
                              var result8 = '';
                            } else {
                              var result8 = null;
                              pos = savedPos2;
                            }
                            if (result8 !== null) {
                              var result6 = [result7, result8];
                            } else {
                              var result6 = null;
                              pos = savedPos1;
                            }
                          } else {
                            var result6 = null;
                            pos = savedPos1;
                          }
                          if (result6 !== null) {
                            var result5 = result6;
                          } else {
                            var result5 = null;;
                          };
                        }
                      }
                      if (result3 !== null) {
                        if (input.substr(pos, 2) === "*/") {
                          var result4 = "*/";
                          pos += 2;
                        } else {
                          var result4 = null;
                          if (reportMatchFailures) {
                            matchFailed("\"*/\"");
                          }
                        }
                        if (result4 !== null) {
                          var result1 = [result2, result3, result4];
                        } else {
                          var result1 = null;
                          pos = savedPos0;
                        }
                      } else {
                        var result1 = null;
                        pos = savedPos0;
                      }
                    } else {
                      var result1 = null;
                      pos = savedPos0;
                    }
                    if (result1 !== null) {
                      var result0 = result1;
                    } else {
                      var result0 = null;;
                    };
                  };
                };
              };
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_s() {
        var cacheKey = 's@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var result1 = parse_space();
        if (result1 !== null) {
          var result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            var result1 = parse_space();
          }
        } else {
          var result0 = null;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_w() {
        var cacheKey = 'w@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var result1 = parse_s();
        var result0 = result1 !== null ? result1 : '';
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_identifier() {
        var cacheKey = 'identifier@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos).match(/^[A-Z_a-z]/) !== null) {
          var result3 = input.charAt(pos);
          pos++;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("[A-Z_a-z]");
          }
        }
        if (result3 !== null) {
          var result4 = [];
          if (input.substr(pos).match(/^[0-9A-Z_a-z]/) !== null) {
            var result5 = input.charAt(pos);
            pos++;
          } else {
            var result5 = null;
            if (reportMatchFailures) {
              matchFailed("[0-9A-Z_a-z]");
            }
          }
          while (result5 !== null) {
            result4.push(result5);
            if (input.substr(pos).match(/^[0-9A-Z_a-z]/) !== null) {
              var result5 = input.charAt(pos);
              pos++;
            } else {
              var result5 = null;
              if (reportMatchFailures) {
                matchFailed("[0-9A-Z_a-z]");
              }
            }
          }
          if (result4 !== null) {
            var result1 = [result3, result4];
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(nmstart, nmchars) { return nmstart + nmchars.join(""); })(result1[0], result1[1])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_octal() {
        var cacheKey = 'octal@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos, 1) === "0") {
          var result3 = "0";
          pos += 1;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("\"0\"");
          }
        }
        if (result3 !== null) {
          var result4 = [];
          if (input.substr(pos).match(/^[0-7]/) !== null) {
            var result5 = input.charAt(pos);
            pos++;
          } else {
            var result5 = null;
            if (reportMatchFailures) {
              matchFailed("[0-7]");
            }
          }
          while (result5 !== null) {
            result4.push(result5);
            if (input.substr(pos).match(/^[0-7]/) !== null) {
              var result5 = input.charAt(pos);
              pos++;
            } else {
              var result5 = null;
              if (reportMatchFailures) {
                matchFailed("[0-7]");
              }
            }
          }
          if (result4 !== null) {
            var result1 = [result3, result4];
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(value) { return "0" + value.join(""); })(result1[1])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_hex() {
        var cacheKey = 'hex@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos, 1) === "0") {
          var result3 = "0";
          pos += 1;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("\"0\"");
          }
        }
        if (result3 !== null) {
          if (input.substr(pos).match(/^[Xx]/) !== null) {
            var result4 = input.charAt(pos);
            pos++;
          } else {
            var result4 = null;
            if (reportMatchFailures) {
              matchFailed("[Xx]");
            }
          }
          if (result4 !== null) {
            if (input.substr(pos).match(/^[0-9A-Fa-f]/) !== null) {
              var result6 = input.charAt(pos);
              pos++;
            } else {
              var result6 = null;
              if (reportMatchFailures) {
                matchFailed("[0-9A-Fa-f]");
              }
            }
            if (result6 !== null) {
              var result5 = [];
              while (result6 !== null) {
                result5.push(result6);
                if (input.substr(pos).match(/^[0-9A-Fa-f]/) !== null) {
                  var result6 = input.charAt(pos);
                  pos++;
                } else {
                  var result6 = null;
                  if (reportMatchFailures) {
                    matchFailed("[0-9A-Fa-f]");
                  }
                }
              }
            } else {
              var result5 = null;
            }
            if (result5 !== null) {
              var result1 = [result3, result4, result5];
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(x, value) { return "0" + x + value.join(""); })(result1[1], result1[2])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_decimal() {
        var cacheKey = 'decimal@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos).match(/^[0-9]/) !== null) {
          var result3 = input.charAt(pos);
          pos++;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("[0-9]");
          }
        }
        if (result3 !== null) {
          var result4 = [];
          if (input.substr(pos).match(/^[0-9]/) !== null) {
            var result5 = input.charAt(pos);
            pos++;
          } else {
            var result5 = null;
            if (reportMatchFailures) {
              matchFailed("[0-9]");
            }
          }
          while (result5 !== null) {
            result4.push(result5);
            if (input.substr(pos).match(/^[0-9]/) !== null) {
              var result5 = input.charAt(pos);
              pos++;
            } else {
              var result5 = null;
              if (reportMatchFailures) {
                matchFailed("[0-9]");
              }
            }
          }
          if (result4 !== null) {
            var result1 = [result3, result4];
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(numStart, numRest) { return numStart + numRest.join(""); })(result1[0], result1[1])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_integer() {
        var cacheKey = 'integer@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos, 1) === "-") {
          var result8 = "-";
          pos += 1;
        } else {
          var result8 = null;
          if (reportMatchFailures) {
            matchFailed("\"-\"");
          }
        }
        var result3 = result8 !== null ? result8 : '';
        if (result3 !== null) {
          var result7 = parse_hex();
          if (result7 !== null) {
            var result4 = result7;
          } else {
            var result6 = parse_octal();
            if (result6 !== null) {
              var result4 = result6;
            } else {
              var result5 = parse_decimal();
              if (result5 !== null) {
                var result4 = result5;
              } else {
                var result4 = null;;
              };
            };
          }
          if (result4 !== null) {
            var result1 = [result3, result4];
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(neg, num) { return neg + num; })(result1[0], result1[1])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
